--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "mongoose": "^5.9.18",
-    "morgan": "^1.10.0",
-    "request": "^2.88.2"
+    "morgan": "^1.10.0"
   }
 }
