--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "handlebars": "^4.7.6",
+    "handlebars-async": "^1.0.0",
     "mongoose": "^5.9.18",
     "morgan": "^1.10.0"
   }
