--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@handlebars/allow-prototype-access": "^1.0.3",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.6",
     "handlebars": "^4.7.7",
